--- a/src/app/pages/order-panel/order-panel.component.html
+++ b/src/app/pages/order-panel/order-panel.component.html
@@ -1,3 +1,46 @@
-<p>order-panel works!</p>
+<div class="order-panel-header">
+  <div class="logo">
+    <img src="./assets/img/ceres-logo.png" width="400px" alt="Ceres" />
+  </div>
+</div>
 
-{{ orders | json }}
+<ng-container *ngIf="$orders">
+  <div class="p-3 m-3">
+    <mat-grid-list class="mx-3" cols="5" rowHeight="2:3" [gutterSize]="'25px'">
+      <ng-container *ngFor="let o of $orders">
+        <mat-grid-tile class="mx-3">
+          <mat-card>
+            <div class="title">
+              <h1>Seat No. : {{ o.seatIndex }}</h1>
+            </div>
+            <div class="content">
+              <mat-list>
+                <ng-container
+                  *ngFor="let sentItem of o.sentItems; let i = index"
+                >
+                  <mat-list-item
+                    >{{ i + 1 }}: {{ sentItem.name }} *
+                    {{ sentItem.quantity }}</mat-list-item
+                  >
+                </ng-container>
+              </mat-list>
+              <mat-divider class="my-3"></mat-divider>
+            </div>
+            <div class="footer">
+              <div>
+                <div class="order-time">Order time: {{ o.orderTime }}</div>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  (click)="onComplete(o)"
+                >
+                  Complete
+                </button>
+              </div>
+            </div>
+          </mat-card>
+        </mat-grid-tile>
+      </ng-container>
+    </mat-grid-list>
+  </div>
+</ng-container>
