--- a/src/app/pages/order-panel/order-panel.component.scss
+++ b/src/app/pages/order-panel/order-panel.component.scss
@@ -9,12 +9,12 @@
 }
 
 mat-grid-tile {
-  background: lightblue;
+  background: rgb(1, 255, 255);
   border-radius: 5em;
-  border: solid 2px #000;
+  border: solid 2px rgb(3, 0, 161);
 }
 
-mat-card {
+.wrapper {
   width: 90%;
   height: 90%;
   mat-divider {
